--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ejercicio To Do App</title>
+    <title>Ejercicio To Do App Módulos</title>
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Ejercicio To Do App</h1>
+    <h1>Ejercicio To Do App Módulos</h1>
 
     <div class="header">
       <h2>Mi lista</h2>
@@ -26,6 +26,6 @@
       <li>Hola</li>
     </ul>
 
-    <script src="javascript/ejercicio-todoApp.js"></script>
+    <script type="module" src="javascript/main.js"></script>
   </body>
 </html>
