--- a/index.html
+++ b/index.html
@@ -4,28 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ejercicio To Do App</title>
+    <title>Document</title>
 
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/style-mobile.css"
+    />
   </head>
   <body>
-    <h1>Ejercicio To Do App</h1>
+    <h1>Ejercicio menú</h1>
+    <form>
+      <select id="menu">
+        <option value="" selected disabled hidden>
+          Selecciona una opción del menú
+        </option>
+        <option value="1">Helado</option>
+        <option value="2">Hamburguesa</option>
+        <option value="3">Perro caliente</option>
+        <option value="4">Ensalada</option>
+      </select>
 
-    <div class="header">
-      <h2>Mi lista</h2>
-      <input
-        type="text"
-        id="miInput"
-        placeholder="Ingresa el título de la tarea"
-      />
-      <button type="button" id="btn" class="addBtn">Agregar</button>
-    </div>
+      <button id="btn" class="btn">Ver precio</button>
+    </form>
 
-    <ul id="miUL">
-      <li>Hola</li>
-      <li>Hola</li>
-    </ul>
+    <div id="item" class="item"></div>
 
-    <script src="javascript/ejercicio-todoApp.js"></script>
+    <script src="javascript/ejercicio-menu.js"></script>
   </body>
 </html>
